feat: Added an `@AsyncOperationBinding` annotation to simplify the creation of new operation bindings (#296)
So far we had 2 Operation Binding implementations: `springwolf-kafka-plugin` and `springwolf-amqp-plugin`. Now we have a new annotation that can be used to simplify the implementation of new bindings, reducing code duplicities.

Any new `OperationBindingProcessor` can extend from the new `AbstractOperationBindingProcessor`